# lab-09-producer-consumer

./: .travis.yml  CMakeLists.txt
include/: Crawler.hpp  header.h  root_certificate.h  sertificate.hpp
scripts/: checks.sh
sources/: Crawler.cpp  main.cpp  source.cpp
tests/: test.cpp
